Fix y-overflow on main page

--- a/css/app.scss
+++ b/css/app.scss
@@ -238,7 +238,7 @@ header {
       .nota-editor,
       .nota-document,
       .js-view {
-        max-height: 600px;
+        max-height: 560px;
         overflow-y: auto;
       }
     }
